<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_nanodegree_apps"
        android:gravity="center"
        style="@style/TextAppearance.AppCompat.Display1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".PortfolioActivity">

        <Button
            android:id="@+id/spotify_streamer_button"
            android:text="@string/spotify_streamer"
            style="@style/button_custom"/>

        <Button
            android:id="@+id/scores_app_button"
            android:text="@string/scores_app"
            style="@style/button_custom"/>

        <Button
            android:id="@+id/library_app_button"
            android:text="@string/library_app"
            style="@style/button_custom"/>

        <Button
            android:id="@+id/build_it_bigger_button"
            android:text="@string/built_it_bigger"
            style="@style/button_custom"/>

        <Button
            android:id="@+id/xyz_reader_button"
            android:text="@string/xyz_reader"
            style="@style/button_custom"/>

        <Button
            android:id="@+id/capstone_button"
            android:text="@string/capstone_project"
            style="@style/button_custom"/>
    </LinearLayout>
</LinearLayout>

